[project]
name = "weather"
version = "0.1.0"
description = ""
authors = [{ name = "John Doe", email = "john.doe@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = ["Programming Language :: Python :: 3"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"