[project]
name = "MeetingProApp"
version = "0.1.0"
description = "Projet MeetingProApp fini"
authors = [{ name = "Dorian Bismuth", email = "dorian.bismuth@uha.fr" }, { name = "Ahmad Hassan", email = "ahmad.hassan@uha.fr" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = ["Programming Language :: Python :: 3"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"